création des classes de base du projet

--- a/schoolBoyBattle/resources.qrc
+++ b/schoolBoyBattle/resources.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file>Resources/img/background/test.png</file>
+        <file>Resources/img/background/terrain1.png</file>
     </qresource>
 </RCC>
