chargement des données des layers

--- a/schoolBoyBattle/resources.qrc
+++ b/schoolBoyBattle/resources.qrc
@@ -11,5 +11,6 @@
         <file>Resources/player/run/girl-red-run.png</file>
         <file>Resources/candy/mandarin.png</file>
         <file>Resources/candy/peanut.png</file>
+        <file>Resources/world/terrain.tmx</file>
     </qresource>
 </RCC>
