--- a/schoolBoyBattle/resources.qrc
+++ b/schoolBoyBattle/resources.qrc
@@ -45,5 +45,7 @@
         <file>Resources/debugTerrain.tmx</file>
         <file>Resources/candy/idle/mandarin-small-idle.png</file>
         <file>Resources/candy/idle/peanut-small-idle.png</file>
+        <file>Resources/candy/idle/mandarin-big-idle.png</file>
+        <file>Resources/candy/idle/peanut-big-idle.png</file>
     </qresource>
 </RCC>
