--- a/schoolBoyBattle/resources.qrc
+++ b/schoolBoyBattle/resources.qrc
@@ -47,5 +47,6 @@
         <file>Resources/candy/idle/peanut-small-idle.png</file>
         <file>Resources/candy/idle/mandarin-big-idle.png</file>
         <file>Resources/candy/idle/peanut-big-idle.png</file>
+        <file>Resources/schoolboybattle-icon.ico</file>
     </qresource>
 </RCC>
