--- a/schoolBoyBattle/resources.qrc
+++ b/schoolBoyBattle/resources.qrc
@@ -47,5 +47,13 @@
         <file>Resources/candy/idle/peanut-small-idle.png</file>
         <file>Resources/candy/idle/mandarin-big-idle.png</file>
         <file>Resources/candy/idle/peanut-big-idle.png</file>
+        <file>Resources/candy/idle/hovers/mandarin-big-idle-black.png</file>
+        <file>Resources/candy/idle/hovers/mandarin-big-idle-red.png</file>
+        <file>Resources/candy/idle/hovers/mandarin-small-idle-black.png</file>
+        <file>Resources/candy/idle/hovers/mandarin-small-idle-red.png</file>
+        <file>Resources/candy/idle/hovers/peanut-big-idle-black.png</file>
+        <file>Resources/candy/idle/hovers/peanut-big-idle-red.png</file>
+        <file>Resources/candy/idle/hovers/peanut-small-idle-black.png</file>
+        <file>Resources/candy/idle/hovers/peanut-small-idle-red.png</file>
     </qresource>
 </RCC>
