--- a/schoolBoyBattle/resources.qrc
+++ b/schoolBoyBattle/resources.qrc
@@ -78,5 +78,81 @@
         <file>Resources/bosses/idle/boss-red-idle.png</file>
         <file>Resources/world/config/spawn-player-black.png</file>
         <file>Resources/world/config/spawn-player-red.png</file>
+        <file>Resources/world/base/face-outside-1.png</file>
+        <file>Resources/world/base/face-outside-2.png</file>
+        <file>Resources/world/base/snow.png</file>
+        <file>Resources/world/base/path/path1.png</file>
+        <file>Resources/world/base/path/path2.png</file>
+        <file>Resources/world/base/path/path3.png</file>
+        <file>Resources/world/base/path/path4.png</file>
+        <file>Resources/world/base/path/path5.png</file>
+        <file>Resources/world/base/path/path6.png</file>
+        <file>Resources/world/base/path/path7.png</file>
+        <file>Resources/world/base/path/path8.png</file>
+        <file>Resources/world/base/path/path9.png</file>
+        <file>Resources/world/base/path/path10.png</file>
+        <file>Resources/world/base/path/path11.png</file>
+        <file>Resources/world/base/path/path12.png</file>
+        <file>Resources/world/base/path/path13.png</file>
+        <file>Resources/world/base/path/path14.png</file>
+        <file>Resources/world/base/path/path16.png</file>
+        <file>Resources/world/base/path/path17.png</file>
+        <file>Resources/world/base/path/path18.png</file>
+        <file>Resources/world/base/path/path19.png</file>
+        <file>Resources/world/base/path/path20.png</file>
+        <file>Resources/world/base/path/path21.png</file>
+        <file>Resources/world/base/path/path22.png</file>
+        <file>Resources/world/base/path/path23.png</file>
+        <file>Resources/world/base/path/path24.png</file>
+        <file>Resources/world/base/path/path25.png</file>
+        <file>Resources/world/base/path/path26.png</file>
+        <file>Resources/world/base/path/path27.png</file>
+        <file>Resources/world/base/path/path28.png</file>
+        <file>Resources/world/base/path/path29.png</file>
+        <file>Resources/world/base/path/path30.png</file>
+        <file>Resources/world/base/path/path31.png</file>
+        <file>Resources/world/base/path/path32.png</file>
+        <file>Resources/world/base/path/path33.png</file>
+        <file>Resources/world/base/path/path34.png</file>
+        <file>Resources/world/base/path/path35.png</file>
+        <file>Resources/world/base/path/path36.png</file>
+        <file>Resources/world/base/path/path37.png</file>
+        <file>Resources/world/base/path/path38.png</file>
+        <file>Resources/world/base/path/path39.png</file>
+        <file>Resources/world/base/path/path40.png</file>
+        <file>Resources/world/base/path/path41.png</file>
+        <file>Resources/world/base/path/path42.png</file>
+        <file>Resources/world/base/path/path43.png</file>
+        <file>Resources/world/base/path/path44.png</file>
+        <file>Resources/world/base/path/path45.png</file>
+        <file>Resources/world/base/path/path46.png</file>
+        <file>Resources/world/base/path/path47.png</file>
+        <file>Resources/world/base/path/path48.png</file>
+        <file>Resources/world/deco/door-vertical-right.png</file>
+        <file>Resources/world/deco/rock-1-bottom.png</file>
+        <file>Resources/world/deco/rock-1-top.png</file>
+        <file>Resources/world/deco/rock-2.png</file>
+        <file>Resources/world/deco/rock-3.png</file>
+        <file>Resources/world/deco/rock-4-bottom.png</file>
+        <file>Resources/world/deco/rock-4-top.png</file>
+        <file>Resources/world/deco/snow-1.png</file>
+        <file>Resources/world/deco/snow-2.png</file>
+        <file>Resources/world/deco/snow-3.png</file>
+        <file>Resources/world/deco/snow-4.png</file>
+        <file>Resources/world/deco/snow-5.png</file>
+        <file>Resources/world/deco/snow-6.png</file>
+        <file>Resources/world/deco/snow-7.png</file>
+        <file>Resources/world/deco/tree-1-bottom.png</file>
+        <file>Resources/world/deco/tree-1-top.png</file>
+        <file>Resources/world/deco/tree-2-bottom.png</file>
+        <file>Resources/world/deco/tree-2-top.png</file>
+        <file>Resources/world/deco/tree-3-bottom.png</file>
+        <file>Resources/world/deco/tree-3-top.png</file>
+        <file>Resources/world/deco/tree-4-bottom.png</file>
+        <file>Resources/world/deco/tree-4-top.png</file>
+        <file>Resources/world/deco/tree-5-bottom.png</file>
+        <file>Resources/world/deco/tree-5-top.png</file>
+        <file>Resources/world/deco/tree-6-bottom.png</file>
+        <file>Resources/world/deco/tree-6-top.png</file>
     </qresource>
 </RCC>
